--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<iframe src="https://docs.google.com/spreadsheets/d/1iZ8QkgxyXqgU0w4wa-JMN2BCWO2em9YbaPYmJ9Vf_MY/edit?usp=sharing
-widget=true&amp;headers=false" width = "500" height = "700" <iframe>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
